<resources>
    <string name="app_name">CikasoDeveloperTest</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="merk">Merk</string>
    <string name="keterangan">Keterangan</string>
    <string name="login_detail" />
</resources>